# file_uploader

./: .gitignore  Cargo.toml  index.html
migrations/: 20250331205932_new.sql  20250410145322_add_files.sql
src/: main.rs
src/db_config/: getfile.rs  mod.rs  storefiles.rs
src/upload/: mod.rs  upload.rs
