[package]
name = "file_uploader"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio ={ version = "*", features = ["full"]}
axum = {version = "0.8.1", features = ["multipart"]}
features = "*"
dotenvy = "0.15.0"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres"] }
flate2 = "1.1.1"
